# firefly-rust

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  firefly.toml  rustfmt.toml
examples/audio_chord/: firefly.toml  main.rs
examples/audio_modulator/: firefly.toml  main.rs
examples/audio_noise/: firefly.toml  main.rs
examples/audio_sawtooth/: firefly.toml  main.rs
examples/audio_sine/: firefly.toml  main.rs
examples/audio_square/: firefly.toml  main.rs
examples/audio_triangle/: firefly.toml  main.rs
examples/image/: firefly.toml  main.rs
examples/sine/: main.rs
examples/triangle/: firefly.toml  main.rs
firefly_toml/: Cargo.toml  README.md
firefly_toml/src/: lib.rs  tests.rs
firefly_toml/tests/: end_to_end.rs  end_to_end.toml
src/: audio.rs  bindings.rs  fs.rs  graphics.rs  input.rs  lib.rs  math.rs  menu.rs  misc.rs  net.rs  shapes.rs  stats.rs  sudo.rs  toml.rs
src/audio/: freq.rs  mod.rs  modulators.rs  nodes.rs  time.rs
src/graphics/: angle.rs  bindings.rs  canvas.rs  font.rs  funcs.rs  image.rs  mod.rs  point.rs  size.rs  types.rs
