[package]
name = "firefly-rust"
version = "0.9.1"
edition = "2021"
rust-version = "1.81.0"
authors = ["Firefly Zero team"]
description = "Rust SDK for making Firefly Zero games"
repository = "https://github.com/firefly-zero/firefly-rust"
license = "MIT"
keywords = ["gamedev", "firefly-zero"]
categories = ["game-development", "no-std", "rendering", "api-bindings", "wasm"]

[features]
default = []
# If disabled, the crate uses no_std.
std = ["alloc"]
# Enable support for allocating functions, like load_file_buf.
# Requires a global allocator to be configured.
alloc = []
# If enabled, add talc-powered global allocator.
talc = ["dep:talc", "alloc"]
# If app panics, show panic info (message, file name, line number).
# Increases the binary size.
panic_info = ["alloc"]
# Enable support for functions requiring sudo.
sudo = []
# Enable support for casting graphic primitives to and from nalgebra crate primitives.
nalgebra = ["dep:nalgebra"]

[dependencies]
nalgebra = { version = "0.33.2", optional = true, default-features = false }
talc = { version = "4.4.2", optional = true, default-features = false, features = [
    "lock_api",
] }
