[package]
name = "firefly-rust"
version = "0.12.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Firefly Zero team"]
description = "Rust SDK for making Firefly Zero games"
repository = "https://github.com/firefly-zero/firefly-rust"
license = "MIT"
keywords = ["gamedev", "firefly-zero"]
categories = ["game-development", "no-std", "rendering", "api-bindings", "wasm"]

[features]
default = ["macros"]
# If disabled, the crate uses no_std.
std = ["alloc"]
# Enable support for allocating functions, like load_file_buf.
# Requires a global allocator to be configured.
alloc = []
# If enabled, add talc-powered global allocator.
talc = ["dep:talc", "alloc"]
# If app panics, show panic info (message, file name, line number).
# Increases the binary size.
panic_info = ["alloc"]
# Enable support for functions requiring sudo.
sudo = []
# Enable support for casting graphic primitives to and from nalgebra crate primitives.
nalgebra = ["dep:nalgebra"]
# Enable support for convenience macros
macros = ["dep:firefly_toml"]

[dependencies]
nalgebra = { version = "0.34.1", optional = true, default-features = false }
talc = { version = "4.4.3", optional = true, default-features = false, features = [
    "lock_api",
] }
firefly_toml = { version = "0.1", optional = true, path = "firefly_toml" }

# https://docs.rs/about/metadata
# https://github.com/firefly-zero/firefly-rust/issues/17
[package.metadata.docs.rs]
features = ["alloc"]
